String Manipulation.ipynb

--- a/String Manipulation.ipynb
+++ b/String Manipulation.ipynb
@@ -2,18 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4772a17-502e-4588-ab27-854abad72ba9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d721d780-9ef9-40f4-9bbb-720ce39af7d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a string:  I love Python\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Results:\n",
+      "Number of vowels: 4\n",
+      "Reversed string: nohtyP evol I\n",
+      "Uppercase string: I LOVE PYTHON\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to count the number of vowels in a string\n",
     "def count_vowels(s):\n",
@@ -68,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
